// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESPHome Compose Build > action-tree-device 1`] = `
"esphome:
  name: action-tree-device
  comment: Action tree compiler test
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: TestWifi
  password: testpass
api:
logger:
  level: INFO
switch:
  id: r_ref0
  platform: gpio
  pin: 12
  name: Test Switch
binary_sensor:
  - platform: gpio
    pin: 13
    name: Simple Toggle
    on_press:
      - switch.toggle: r_ref0
  - platform: gpio
    pin: 14
    name: Sequence Actions
    on_press:
      - switch.toggle: r_ref0
      - delay: 500ms
      - switch.toggle: r_ref0
  - platform: gpio
    pin: 15
    name: Logger
    on_press:
      - logger.log: Button pressed!
"
`;

exports[`ESPHome Compose Build > auto-reactive-device 1`] = `
"esphome:
  name: auto-reactive-device
  comment: Auto-reactive transform demo
  includes:
    - espcompose_bindings.h
    - espcompose_reactive.h
  on_boot:
    priority: -10
    then:
      - lambda: espcompose::setup();
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            x: 10
            y: 10
            text: !lambda "return std::string(id(ha_light_office).state ? \\"on\\" : \\"off\\");"
            id: rw_ref1
        - label:
            x: 10
            y: 40
            text: !lambda "return espcompose::memo_1.get().c_str();"
            id: rw_ref2
        - slider:
            x: 10
            y: 70
            width: 200
            value: !lambda "return espcompose::memo_2.get();"
            id: rw_ref3
        - label:
            x: 10
            y: 100
            text: !lambda "return espcompose::memo_3.get().c_str();"
            id: rw_ref4
        - label:
            x: 10
            y: 130
            text: !lambda "return espcompose::memo_0.get().c_str();"
            id: rw_ref5
binary_sensor:
  platform: homeassistant
  id: ha_light_office
  entity_id: light.office
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_office.set(x);
        espcompose::Scheduler::instance().flush();"
sensor:
  - platform: homeassistant
    id: ha_light_office_brightness
    entity_id: light.office
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_office_brightness.set(x);
          espcompose::Scheduler::instance().flush();"
  - platform: homeassistant
    id: ha_sensor_temp_inside
    entity_id: sensor.temp_inside
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_temp_inside.set(x);
          espcompose::Scheduler::instance().flush();"
"
`;

exports[`ESPHome Compose Build > basic-device 1`] = `
"esphome:
  name: basic-device
  comment: A basic ESPHome device
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
ota:
  platform: esphome
logger:
  level: DEBUG
"
`;

exports[`ESPHome Compose Build > dashboard-device 1`] = `
"esphome:
  name: living-room-dashboard
  friendly_name: Living Room Dashboard
  comment: A custom Home Assistant dashboard.
  min_version: 2026.1.0
esp32:
  variant: ESP32P4
  flash_size: 32MB
  cpu_frequency: 360MHZ
  framework:
    type: esp-idf
    version: latest
    advanced:
      enable_idf_experimental_features: true
esp32_hosted:
  variant: ESP32C6
  reset_pin: 54
  cmd_pin: 19
  clk_pin: 18
  d0_pin: 14
  d1_pin: 15
  d2_pin: 16
  d3_pin: 17
  active_high: true
psram:
  mode: hex
  speed: 200MHz
preferences:
  flash_write_interval: 5min
esp_ldo:
  voltage: 2.5V
  channel: "3"
i2c:
  id: r_ref0
  sda: 7
  scl: 8
  frequency: 400kHz
  scan: true
touchscreen:
  platform: gt911
  i2c_id: r_ref0
  display: r_ref1
  update_interval: 50ms
  transform:
    swap_xy: true
    mirror_x: true
    mirror_y: false
output:
  id: r_ref2
  platform: ledc
  pin: 26
  frequency: 1000Hz
light:
  platform: monochromatic
  output: r_ref2
  name: Display Backlight
  icon: mdi:lightbulb-on
  restore_mode: ALWAYS_ON
  default_transition_length:
    milliseconds: 250
display:
  id: r_ref1
  platform: mipi_dsi
  model: WAVESHARE-P4-NANO-10.1
  rotation: 270
i2s_audio:
  id: r_ref3
  i2s_mclk_pin: 13
  i2s_lrclk_pin: 10
  i2s_bclk_pin: 12
audio_dac:
  platform: es8311
  i2c_id: r_ref0
  address: 24
audio_adc:
  platform: es7210
  i2c_id: r_ref0
  address: 64
microphone:
  platform: i2s_audio
  i2s_audio_id: r_ref3
  i2s_din_pin: 11
  sample_rate: 16000
  bits_per_sample: 16bit
  adc_type: external
speaker:
  - id: r_ref4
    platform: i2s_audio
    i2s_audio_id: r_ref3
    i2s_dout_pin: 9
    dac_type: external
    channel: mono
    buffer_duration: 100ms
    bits_per_sample: 16bit
    sample_rate: 48000
  - platform: mixer
    output_speaker: r_ref4
    source_speakers:
      - id: r_ref5
        timeout: never
      - id: r_ref6
        timeout: never
  - id: r_ref7
    platform: resampler
    output_speaker: r_ref5
    sample_rate: 48000
    bits_per_sample: 16
  - platform: resampler
    output_speaker: r_ref6
    sample_rate: 48000
    bits_per_sample: 16
rtttl:
  speaker: r_ref7
switch:
  platform: gpio
  pin: 53
  name: Speaker Enable
  icon: mdi:speaker
  entity_category: config
  restore_mode: RESTORE_DEFAULT_ON
wifi:
  networks:
    - ssid: HomeWifi
      password: s3cr3t!!
  power_save_mode: NONE
  fast_connect: true
  ap:
    password: password1234
api:
captive_portal:
web_server:
  port: 80
  version: "3"
ota:
  platform: esphome
logger:
  level: DEBUG
  hardware_uart: UART0
  logs:
    lvgl: INFO
binary_sensor:
  - platform: homeassistant
    name: Kitchen Floods
    entity_id: light.kitchen_floods
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Living Room Light
    entity_id: light.living_room
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Front Door
    entity_id: binary_sensor.front_door_sensor_window_door_is_open
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Back Door
    entity_id: binary_sensor.back_door_sensor_window_door_is_open_2
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Living Room Motion
    entity_id: binary_sensor.living_room_motion_sensor_motion_detection
    trigger_on_initial_state: true
lvgl:
  displays:
    - r_ref1
script:
  - id: play_click_sound
    then:
      - logger.log: Click sound disabled for testing
"
`;

exports[`ESPHome Compose Build > design-system-device 1`] = `
"esphome:
  name: design-system-device
  comment: Design system demo
  includes:
    - espcompose_bindings.h
    - espcompose_reactive.h
  on_boot:
    priority: -10
    then:
      - lambda: espcompose::setup();
  platformio_options:
    build_flags:
      - -DLV_FONT_MONTSERRAT_16=1
      - -DLV_FONT_MONTSERRAT_20=1
      - -DLV_FONT_MONTSERRAT_28=1
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - bg_color: !lambda "return espcompose::thm_colors_background.get();"
      border_width: 0
      pad_all: !lambda "return espcompose::thm_spacing_lg.get();"
      scrollbar_mode: 'OFF'
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  text_color: !lambda "return espcompose::thm_colors_textPrimary.get();"
                  text_font: !lambda "return espcompose::memo_0.get();"
                  text: Smart Home
                  id: rw_ref1
              - obj:
                  bg_color: !lambda "return espcompose::thm_colors_surfaceAlt.get();"
                  pad_all: !lambda "return espcompose::thm_spacing_md.get();"
                  radius: !lambda "return espcompose::thm_radii_md.get();"
                  border_width: 0
                  width: 100%
                  height: SIZE_CONTENT
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: COLUMN
                  widgets:
                    - label:
                        text_color: !lambda "return espcompose::thm_colors_textPrimary.get();"
                        text_font: !lambda "return espcompose::memo_1.get();"
                        text: Living Room
                        id: rw_ref2
                    - obj:
                        bg_opa: TRANSP
                        width: 100%
                        height: SIZE_CONTENT
                        layout:
                          type: flex
                          flex_flow: COLUMN
                        widgets:
                          - label:
                              text_color: !lambda "return espcompose::thm_colors_textPrimary.get();"
                              text_font: !lambda "return espcompose::memo_2.get();"
                              text: Brightness
                              id: rw_ref3
                          - slider:
                              min_value: 0
                              max_value: 255
                    - obj:
                        bg_opa: TRANSP
                        width: 100%
                        height: SIZE_CONTENT
                        layout:
                          type: flex
                          flex_flow: ROW
                          flex_align_main: SPACE_BETWEEN
                          flex_align_cross: CENTER
                        widgets:
                          - label:
                              text_color: !lambda "return espcompose::thm_colors_textPrimary.get();"
                              text_font: !lambda "return espcompose::memo_3.get();"
                              text: Power
                              id: rw_ref4
                          - switch: {}
                  id: rw_ref5
              - obj:
                  width: 100%
                  height: SIZE_CONTENT
                  bg_opa: TRANSP
                  border_width: 0
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: ROW
                    flex_align_main: SPACE_BETWEEN
                  widgets:
                    - button:
                        bg_color: !lambda "return espcompose::thm_colors_success_bg.get();"
                        border_width: 0
                        width: !lambda "return espcompose::memo_5.get();"
                        height: !lambda "return espcompose::thm_sizes_sm_height.get();"
                        pressed:
                          bg_color: !lambda "return espcompose::thm_colors_success_bgPressed.get();"
                        widgets:
                          - label:
                              text: Turn On
                              text_color: !lambda "return espcompose::thm_colors_success_text.get();"
                              text_font: !lambda "return espcompose::memo_4.get();"
                              align: CENTER
                              id: rw_ref6
                        id: rw_ref7
                    - button:
                        bg_opa: TRANSP
                        border_color: !lambda "return espcompose::thm_colors_danger_bg.get();"
                        border_width: 2
                        width: !lambda "return espcompose::memo_7.get();"
                        height: !lambda "return espcompose::thm_sizes_sm_height.get();"
                        pressed:
                          bg_color: !lambda "return espcompose::thm_colors_danger_bg.get();"
                          bg_opa: COVER
                        widgets:
                          - label:
                              text: Turn Off
                              text_color: !lambda "return espcompose::thm_colors_danger_bg.get();"
                              text_font: !lambda "return espcompose::memo_6.get();"
                              align: CENTER
                              id: rw_ref8
                        id: rw_ref9
      id: rw_ref10
"
`;

exports[`ESPHome Compose Build > device-script-device 1`] = `
"esphome:
  name: device-script-demo
  comment: Device script demo
esp32:
  board: esp32dev
  framework:
    type: arduino
wifi:
  ssid: TestNet
  password: testpass
api:
logger:
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute:
        id: blink
    - script.wait:
        id: blink
  on_release:
    - script.execute:
        id: start_up
    - script.wait:
        id: start_up
script:
  - id: blink
    then:
      - logger.log: Starting blink sequence
      - delay: 1000ms
      - logger.log: Blink done
  - id: start_up
    then:
      - logger.log:
          format: Device booting up
          level: INFO
      - delay: 2000ms
      - logger.log: Boot complete
"
`;

exports[`ESPHome Compose Build > embed-device 1`] = `
"esphome:
  name: embed-demo
  comment: Embed device demo
esp32:
  board: esp32dev
  framework:
    type: arduino
wifi:
  ssid: TestNetwork
  password: test-password
api:
  encryption:
    key: YWJjZGVmZ2hpamtsbW5vcHFyc3R1dnd4eXoxMjM0NTY=
ota:
  platform: esphome
logger:
  level: DEBUG
sensor:
  platform: adc
  pin: 36
  name: Analog Reading
  update_interval: 5s
"
`;

exports[`ESPHome Compose Build > function-component-device 1`] = `
"esphome:
  name: component-device
  comment: Device built from function components
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
ota:
  platform: esphome
logger:
  level: INFO
"
`;

exports[`ESPHome Compose Build > ha-binding-device 1`] = `
"esphome:
  name: ha-binding-device
  comment: HA entity binding demo
  includes:
    - espcompose_bindings.h
    - espcompose_reactive.h
  on_boot:
    priority: -10
    then:
      - lambda: espcompose::setup();
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            x: 10
            y: 10
            text: !lambda "return std::string(id(ha_light_kitchen_floods).state ? \\"on\\" :
              \\"off\\");"
            id: rw_ref1
        - button:
            x: 10
            y: 40
            width: 120
            height: 50
            on_release:
              - homeassistant.action:
                  action: light.toggle
                  data:
                    entity_id: light.kitchen_floods
            widgets:
              - label:
                  text: Toggle
                  align: CENTER
        - label:
            x: 10
            y: 100
            text: !lambda "return to_string(id(ha_sensor_living_room_temperature).state);"
            id: rw_ref2
binary_sensor:
  platform: homeassistant
  id: ha_light_kitchen_floods
  entity_id: light.kitchen_floods
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods.set(x);
        espcompose::Scheduler::instance().flush();"
sensor:
  - platform: homeassistant
    id: ha_light_kitchen_floods_brightness
    entity_id: light.kitchen_floods
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_brightness.set(x);
          espcompose::Scheduler::instance().flush();"
  - platform: homeassistant
    id: ha_sensor_living_room_temperature
    entity_id: sensor.living_room_temperature
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_living_room_temperature.set(x);
          espcompose::Scheduler::instance().flush();"
"
`;

exports[`ESPHome Compose Build > ha-dynamic-device 1`] = `
"esphome:
  name: ha-dynamic-device
  comment: Dynamic HA entity binding demo
  includes:
    - espcompose_bindings.h
    - espcompose_reactive.h
  on_boot:
    priority: -10
    then:
      - lambda: espcompose::setup();
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            x: 10
            y: 10
            text: !lambda "return std::string(id(ha_light_office_main).state ? \\"on\\" :
              \\"off\\");"
            id: rw_ref1
        - button:
            x: 10
            y: 40
            width: 120
            height: 50
            on_release:
              - homeassistant.action:
                  action: light.toggle
                  data:
                    entity_id: light.office_main
            widgets:
              - label:
                  text: Office
                  align: CENTER
binary_sensor:
  platform: homeassistant
  id: ha_light_office_main
  entity_id: light.office_main
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_office_main.set(x);
        espcompose::Scheduler::instance().flush();"
sensor:
  platform: homeassistant
  id: ha_light_office_main_brightness
  entity_id: light.office_main
  attribute: brightness
  on_value:
    - lambda: !lambda "espcompose::sig_ha_light_office_main_brightness.set(x);
        espcompose::Scheduler::instance().flush();"
"
`;

exports[`ESPHome Compose Build > image-font-device 1`] = `
"esphome:
  name: image-font-device
  comment: useImage/useFont hook demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - image:
            x: 10
            y: 10
            src: r_ref1
        - image:
            x: 50
            y: 10
            src: r_ref1
        - image:
            x: 90
            y: 10
            src: r_ref2
        - label:
            x: 10
            y: 60
            text: Small
            text_font: r_ref3
        - label:
            x: 10
            y: 90
            text: Also small
            text_font: r_ref3
        - label:
            x: 10
            y: 120
            text: Large
            text_font: r_ref4
image:
  - id: r_ref1
    file: assets/icon-5e4d533f.png
    type: RGB
    resize: 32x32
    transparency: alpha_channel
  - id: r_ref2
    file: assets/icon-5e4d533f.png
    type: BINARY
font:
  - id: r_ref3
    file: gfonts://Roboto
    size: 20
  - id: r_ref4
    file: gfonts://Roboto
    size: 32
"
`;

exports[`ESPHome Compose Build > library-contract-device (consumes compiled library) 1`] = `
"esphome:
  name: library-contract-device
  comment: Compiled library consumption test
  includes:
    - espcompose_bindings.h
    - espcompose_reactive.h
  on_boot:
    priority: -10
    then:
      - lambda: espcompose::setup();
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
text_sensor:
  platform: template
  name: Light Status
  id: light_status
binary_sensor:
  platform: homeassistant
  id: ha_light_office
  entity_id: light.office
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_office.set(x);
        espcompose::Scheduler::instance().flush();"
sensor:
  platform: homeassistant
  id: ha_light_office_brightness
  entity_id: light.office
  attribute: brightness
  on_value:
    - lambda: !lambda "espcompose::sig_ha_light_office_brightness.set(x);
        espcompose::Scheduler::instance().flush();"
"
`;

exports[`ESPHome Compose Build > lvgl-device 1`] = `
"esphome:
  name: lvgl-device
  comment: LVGL single-page button demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - button:
            x: 10
            y: 10
            width: 120
            height: 50
            widgets:
              - label:
                  text: Click me
                  align: CENTER
"
`;

exports[`ESPHome Compose Build > multi-source-reactive-device 1`] = `
"esphome:
  name: multi-source-reactive-device
  comment: Multi-source reactive runtime demo
  includes:
    - espcompose_bindings.h
    - espcompose_reactive.h
  on_boot:
    priority: -10
    then:
      - lambda: espcompose::setup();
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            x: 10
            y: 10
            text: !lambda "return espcompose::memo_0.get().c_str();"
            id: rw_ref1
binary_sensor:
  platform: homeassistant
  id: ha_light_kitchen_floods
  entity_id: light.kitchen_floods
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods.set(x);
        espcompose::Scheduler::instance().flush();"
sensor:
  - platform: homeassistant
    id: ha_light_kitchen_floods_brightness
    entity_id: light.kitchen_floods
    attribute: brightness
    on_value:
      - lambda: !lambda "espcompose::sig_ha_light_kitchen_floods_brightness.set(x);
          espcompose::Scheduler::instance().flush();"
  - platform: homeassistant
    id: ha_sensor_temp_inside
    entity_id: sensor.temp_inside
    on_value:
      - lambda: !lambda "espcompose::sig_ha_sensor_temp_inside.set(x);
          espcompose::Scheduler::instance().flush();"
"
`;

exports[`ESPHome Compose Build > project-device 1`] = `
"esphome:
  name: project-demo
  comment: Project structure demo
esp32:
  board: esp32dev
  framework:
    type: arduino
wifi:
  ssid: TestNet
  password: testpass
api:
ota:
  platform: esphome
logger:
  level: DEBUG
sensor:
  - platform: adc
    pin: 32
    name: ADC Sensor 1
    update_interval: 10s
  - platform: adc
    pin: 33
    name: ADC Sensor 2
    update_interval: 10s
"
`;

exports[`ESPHome Compose Build > reactive-device 1`] = `
"esphome:
  name: reactive-device
  comment: Local ref reactive binding demo
  includes:
    - espcompose_bindings.h
    - espcompose_reactive.h
  on_boot:
    priority: -10
    then:
      - lambda: espcompose::setup();
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
sensor:
  id: r_ref0
  platform: internal_temperature
  name: ESP Temperature
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref1
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref1
  pages:
    - widgets:
        - label:
            x: 10
            y: 10
            text: !lambda "return id(r_ref0).state;"
            id: rw_ref2
        - button:
            x: 10
            y: 50
            width: 120
            height: 50
            on_release:
              - homeassistant.action:
                  action: switch.toggle
                  data:
                    entity_id: switch.space_heater
            widgets:
              - label:
                  text: Heater
                  align: CENTER
        - slider:
            x: 10
            y: 120
            width: 200
            indicator:
              bg_opa: !lambda "return espcompose::memo_0.get().c_str();"
            id: rw_ref3
        - button:
            x: 10
            y: 160
            pressed:
              bg_opa: !lambda "return espcompose::memo_1.get().c_str();"
            widgets:
              - label:
                  text: Styled
                  align: CENTER
            id: rw_ref4
        - slider:
            x: 10
            y: 210
            width: 200
            indicator:
              pressed:
                bg_opa: !lambda "return espcompose::memo_2.get().c_str();"
            id: rw_ref5
binary_sensor:
  platform: homeassistant
  id: ha_switch_space_heater
  entity_id: switch.space_heater
  trigger_on_initial_state: true
  on_state:
    - lambda: !lambda "espcompose::sig_ha_switch_space_heater.set(x);
        espcompose::Scheduler::instance().flush();"
"
`;

exports[`ESPHome Compose Build > script-device 1`] = `
"esphome:
  name: script-device
  comment: Device using action tree authoring
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: INFO
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute:
        id: greet
    - script.wait:
        id: greet
  on_release:
    - delay: 100ms
script:
  - id: greet
    then:
      - logger.log: Hello from ESPCompose!
      - delay: 500ms
"
`;

exports[`ESPHome Compose Build > sensor-device 1`] = `
"esphome:
  name: sensor-device
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
sensor:
  platform: dht
  pin: 4
  model: DHT22
  temperature:
    name: Temperature
  humidity:
    name: Humidity
binary_sensor:
  platform: gpio
  pin: 5
  name: Motion Sensor
  device_class: motion
logger:
  level: INFO
"
`;

exports[`ESPHome Compose Build > trigger-device 1`] = `
"esphome:
  name: trigger-device
  comment: Device demonstrating automation API
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
output:
  id: r_ref0
  platform: ledc
  pin: 19
  frequency: 1000Hz
light:
  id: r_ref1
  platform: monochromatic
  name: Desk Light
  output: r_ref0
switch:
  id: r_ref2
  platform: gpio
  pin: 5
  name: Relay
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute:
        id: toggle_all
    - script.wait:
        id: toggle_all
  on_release:
    - light.turn_off: r_ref1
    - delay: 100ms
    - switch.turn_off: r_ref2
  on_double_click:
    - script.execute:
        id: dim_light
    - script.wait:
        id: dim_light
script:
  - id: toggle_all
    then:
      - light.toggle: r_ref1
      - delay: 200ms
      - switch.toggle: r_ref2
  - id: dim_light
    then:
      - light.turn_on:
          id: r_ref1
          brightness: 0.5
      - logger.log: Light dimmed to 50%
"
`;
